# cauliflower

./: .gitignore  .ycm_extra_conf.py  EXPE.sh  LICENSE-MIT.txt  Makefile  build.gradle  jensrun.sh  readme.md
example/: VirtualDispatch.dl  egrun.sh  shrink.py  soufflize.sh  unshrink.py  vdispatch.dl
example/csv/: bar.csv  foo.csv
example/datalog/: bd.sh  cl.sh  convert.py  csv_to_edb.sh  experiment.sh  lb.sh  sf.sh  souf.dl  vpt_z3.datalog
example/experiment/: .gitignore  build.sh  cclyser_convert.sh  common.sh  exp_build.sh  exp_cclyser.sh  exp_common.sh  exp_gigascale.sh  exp_gnuplot.txt  exp_mem_monitor.sh  exp_report.sh  run_cclyser.sh  run_gigascale.sh
example/experiment_optimise/: do_experiment.sh
example/fld/: knows.csv  sees.csv
example/intersect/: a.csv  b.csv
example/llvm/: .ycm_extra_conf.py  CMakeLists.txt  andersen.cflr  cclyser.cflr  cclyser_convert.sh  cclyser_java.cflr  opt_pass_finder.sh  opt_prep.sh  opt_stat_runner.sh  spec_config.cfg  spec_intercept.sh
example/llvm/cauli/: CMakeLists.txt  andersen.h  andersen_cflr.cpp  dyck.cpp  fact_dumper.cpp
example/llvm/tests/: control.c  flow.c  for.c  simple.c  swap.c  uninit_cond.c
example/pt-0/: alloc.csv
example/pt-03/: load.csv
example/pt-04/: src.java
example/pt-1/: alloc.csv  assign.csv
example/pt-2/: alloc.csv  store.csv
example/pt-3/: assign.csv
example/rdm/: rdm_c.cflr  rdm_s.cflr  rdmake.sh  souffle_rdm_c.dl  souffle_rdm_s.dl
example/running/: a.csv  b.csv  running.cflr
example/tc/: cplex.sh  glprun  opl_sh.mod  opl_tc.mod  sh.mod  solve.sh
example/vpt-01/: Main.java  VarPointsTo.csv  jvpt.cflr
experiments/: facts_to_csv  timings
experiments/_defunct/: countercheck.py  egrun.sh
experiments/datalog_performance_cmp/: convert.py  lb.sh  logi.dl  sf.sh  z3.datalog  z3.sh
experiments/giga_llvm/: exp_common.sh  exp_gigascale.sh  exp_gnuplot.txt  experimentblob.sh  gigarun.sh  java_gigascale.cflr  spec_config.cfg  spec_intercept.sh
experiments/optimise_lbcmp/: .gitignore  run.sh  souffle_virtual.dl
experiments/optimise_vdispatch/: do_experiment.sh  gen_dataset.sh  optimiser_check
experiments/shapiro-horwitz/: sh_ho.sh  unshrink.py
gradle/wrapper/: gradle-wrapper.properties
include/: BTree.h  CompiledRamTuple.h  ParallelUtils.h  Trie.h  adt.h  cflr.h  concise_tree.h  csv.h  label.h  neighbourhood_map.h  pmap.h  problem.h  relation.h  relation_buffer.h  rule.h  semi_naive.h  utilities.h  utility_templates.h
spikes/: b.cpp  caul.cpp  fld.cpp  jpt.cpp  multiply_time.cpp  pointsto.cpp  rdm_c_TEMP.h  rev.cpp  running.cpp  t.cpp  tarjan.cpp  xomp.h
src/: .ycm_extra_conf.py  main.cpp  utilities.cpp
src/cauliflower/: Main.java  Util.java
src/main/cpp/spikes/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  logger.cpp  main.cpp  t.cpp
src/test/cpp/: .ycm_extra_conf.py  CMakeLists.txt  test_neighbourhood_map.cpp  test_pmap.cpp  test_relation_buffer.cpp  testvis.py
test/: test.cpp  test_registrar.cpp  test_relation_buffer.cpp
tools/: correctness  experimentblob.sh  external_compile  timings
(+147 files in other folders)
